--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -203,8 +203,8 @@
                     numberpicker:custom_layout="@layout/number_picker_layout"
                     numberpicker:focusable="false"
                     numberpicker:max="15"
-                    numberpicker:min="0"
-                    numberpicker:unit="1"
+                    numberpicker:min="-1"
+                    numberpicker:unit="11"
                     numberpicker:value="0" />
 
             </LinearLayout>
@@ -388,9 +388,9 @@
                 android:id="@+id/climbedCheckedTextView"
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/back"
                 android:checkMark="?android:attr/listChoiceIndicatorMultiple"
@@ -401,47 +401,47 @@
                 android:text="Climbed?"
                 android:textColor="#AAAAAA" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="15dp"
                 android:layout_weight="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textSize="15sp"
-                android:text="Type of Drive Base"/>
+                android:orientation="horizontal">
 
-            <Spinner
-                android:id="@+id/driveTypeSpinner"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:layout_gravity="end"
-                android:focusable="false"
-                android:background="@drawable/back"
-                android:theme="@style/mySpinnerItemStyle" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="Type of Drive Base"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp" />
 
-        </LinearLayout>
+                <Spinner
+                    android:id="@+id/driveTypeSpinner"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="end"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/back"
+                    android:focusable="false"
+                    android:theme="@style/mySpinnerItemStyle" />
+
+            </LinearLayout>
 
             <CheckedTextView
                 android:id="@+id/connectionLossCheckedTextView"
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginBottom="70dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="70dp"
+                android:layout_marginTop="50dp"
                 android:layout_weight="1"
                 android:background="@drawable/back"
                 android:checkMark="?android:attr/listChoiceIndicatorMultiple"
@@ -527,6 +527,10 @@
                 android:textColor="#AAAAAA"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/messageTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
